// Copyright 2017 <chaishushan{AT}gmail.com>. All rights reserved.
// Use of this source code is governed by a Apache
// license that can be found in the LICENSE file.

syntax = "proto2";

package service;

import "spec_metadata/spec.proto";

import "google/protobuf/timestamp.proto";

// ----------------------------------------------------------------------------
// https://docs.qingcloud.com/api/alarm/index.html
// ----------------------------------------------------------------------------

service AlarmService {
	option (qingcloud.api.spec_metadata.service_option) = {
		external_docs: {
			url: "https://docs.qingcloud.com/api/alarm/index.html"
		}
	};

	rpc DescribeAlarmPolicies(DescribeAlarmPoliciesInput) returns (DescribeAlarmPoliciesOutput);
	rpc CreateAlarmPolicy(CreateAlarmPolicyInput) returns (CreateAlarmPolicyOutput);
	rpc ModifyAlarmPolicyAttributes(ModifyAlarmPolicyAttributesInput) returns (ModifyAlarmPolicyAttributesOutput);
	rpc DeleteAlarmPolicies(DeleteAlarmPoliciesInput) returns (DeleteAlarmPoliciesOutput);
	rpc DescribeAlarmPolicyRules(DescribeAlarmPolicyRulesInput) returns (DescribeAlarmPolicyRulesOutput);
	rpc AddAlarmPolicyRules(AddAlarmPolicyRulesInput) returns (AddAlarmPolicyRulesOutput);
	rpc ModifyAlarmPolicyRuleAttributes(ModifyAlarmPolicyRuleAttributesInput) returns (ModifyAlarmPolicyRuleAttributesOutput);
	rpc DeleteAlarmPolicyRules(DeleteAlarmPolicyRulesInput) returns (DeleteAlarmPolicyRulesOutput);
	rpc DescribeAlarmPolicyActions(DescribeAlarmPolicyActionsInput) returns (DescribeAlarmPolicyActionsOutput);
	rpc AddAlarmPolicyActions(AddAlarmPolicyActionsInput) returns (AddAlarmPolicyActionsOutput);
	rpc ModifyAlarmPolicyActionAttributes(ModifyAlarmPolicyActionAttributesInput) returns (ModifyAlarmPolicyActionAttributesOutput);
	rpc DeleteAlarmPolicyActions(DeleteAlarmPolicyActionsInput) returns (DeleteAlarmPolicyActionsOutput);
	rpc AssociateAlarmPolicy(AssociateAlarmPolicyInput) returns (AssociateAlarmPolicyOutput);
	rpc DissociateAlarmPolicy(DissociateAlarmPolicyInput) returns (DissociateAlarmPolicyOutput);
	rpc ApplyAlarmPolicy(ApplyAlarmPolicyInput) returns (ApplyAlarmPolicyOutput);
	rpc DescribeAlarms(DescribeAlarmsInput) returns (DescribeAlarmsOutput);
	rpc DescribeAlarmHistory(DescribeAlarmHistoryInput) returns (DescribeAlarmHistoryOutput);
}

// ----------------------------------------------------------------------------

message DescribeAlarmPoliciesInput {
	repeated string alarm_policies = 1;
	optional string alarm_policy_name = 2;
	optional string alarm_policy_type = 3 [
		(qingcloud.api.spec_metadata.field_option) = {
			enum_value: [
				"instance",
				"eip",
				"router",
				"loadbalancer_listener_tcp",
				"loadbalancer_listener_https",
				"loadbalancer_listener_http",
				"loadbalancer_backend_http",
				"loadbalancer_backend_tcp",
				"rdb_mysql",
				"rdb_psql",
				"elasticsearch_node",
				"cache_node_memcached",
				"cache_node_redis",
				"queue_node_kafka",
				"spark_node",
				"hadoop_node",
				"zookeeper_node",
				"hbase_node",
				"mongo_instance",
				"storm_node"
			]
		}
	];
	optional string search_word = 4;
	optional int32 verbose = 5;
	optional int32 offset = 6;
	optional int32 limit = 7 [default = 20];
}
message DescribeAlarmPoliciesOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional ResponseItem alarm_policy_set = 4;
	optional int32 total_count = 5;

	message ResponseItem {
		optional string alarm_policy_id = 1;
		optional string alarm_policy_name = 2;
		optional string description = 3;
		repeated string resources = 4;
		optional string alarm_policy_type = 5;
		optional int32 is_applied = 6;
		optional string status = 7;
		optional google.protobuf.Timestamp create_time = 8;
		optional google.protobuf.Timestamp status_time = 9;
	}
}

// ----------------------------------------------------------------------------

message CreateAlarmPolicyInput {
	optional string alarm_policy_type = 1; // 告警策略类型
	optional string period = 2;            // 告警策略周期: 一分钟: 1m, 5分钟: 5m
	optional string alarm_policy_name = 3; // 告警策略名称
}
message CreateAlarmPolicyOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string alarm_policy_id = 4;   // 创建成功的告警策略 ID
}

// ----------------------------------------------------------------------------

message ModifyAlarmPolicyAttributesInput {
	optional string alarm_policy = 1;      // 告警策略 ID
	optional string alarm_policy_name = 2; // 告警策略名称
	optional string period = 3;            // 告警策略检查周期
	optional string description = 4;       // 告警策略描述
}
message ModifyAlarmPolicyAttributesOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;
}

// ----------------------------------------------------------------------------

message DeleteAlarmPoliciesInput {
	repeated string alarm_policies = 1;
}
message DeleteAlarmPoliciesOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated string alarm_policies = 4;
}

// ----------------------------------------------------------------------------

message DescribeAlarmPolicyRulesInput {
	optional string alarm_policy = 1;
	repeated string alarm_policy_rules = 2;
	optional int32 offset = 3;
	optional int32 limit = 4 [default = 20];
}
message DescribeAlarmPolicyRulesOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated ResponseItem alarm_policy_rule_set = 4;
	optional int32 total_count = 5;

	message ResponseItem {
		optional string alarm_policy_id = 1;      // 告警策略ID
		optional string alarm_policy_rule_id = 2; // 告警策略规则ID
		optional string meter = 3;                // 资源监控项，不同资源类型有不同的监控项。可参考 资源监控
		optional string condition_type = 4;       // 判断条件类型：gt - 大于, lt - 小于
		optional string thresholds = 5;           // 告警阈值
		optional string data_processor = 6;       // 通常都是采用默认值 “raw” 表示对监控数据不需做额外处理。
		                                 // 如果监控资源类型是公网 IP ，还可选择 “percent” 表示阈值数字代表的是百分比，
		                                 // 这样系统会自动根据公网 IP 当前的带宽上限计算百分比。
		optional string consecutive_periods = 7;  // 连续周期数，表示连续多个周期都满足告警条件时，才出发告警。默认是 1 。
		optional string period_start_hhmm = 8;    // 此规则生效的起始时间，格式为 hh:mm ，默认是零点。
		optional string period_end_hhmm = 9;      // 此规则生效的结束时间，格式为 hh:mm 默认是 23:59 。
	}
}

// ----------------------------------------------------------------------------

message AddAlarmPolicyRulesInput {
	optional string alarm_policy = 1;
	repeated Rule rules = 2;

	message Rule {
		optional string alarm_policy_rule_name = 1; // 规则名称
		optional string meter = 2;                  // 资源监控项，不同资源类型有不同的监控项。可参考 资源监控
		optional string condition_type = 3;         // 条件类型: gt (大于), lt (小于)
		optional int32 thresholds = 4;              // 阈值
		optional string data_processor = 5;         // 监控数据处理方式: raw (使用监控数据原始值), percent (只适用于 IP 带宽监控，将监控数据转换为带宽占用百分比，再跟阈值进行比较) 默认是 raw 。
		optional int32 consecutive_periods = 6;     // 连续周期数，即连续几个检查周期，监控数据都达到了告警阈值，才触发告警行为。 默认是 1 。
	}
}
message AddAlarmPolicyRulesOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated string alarm_policy_rules = 4; // 添加成功的监控告警策略规则 ID 列表
}

// ----------------------------------------------------------------------------

message ModifyAlarmPolicyRuleAttributesInput {
	optional string alarm_policy_rule = 1;
	optional string alarm_policy_rule_name = 2;
	optional string condition_type = 3;
	optional string thresholds = 4;
	optional string data_processor = 5;
	optional string consecutive_periods = 6;
}
message ModifyAlarmPolicyRuleAttributesOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string alarm_policy_rule_id = 4; // 成功修改的告警策略规则ID
}

// ----------------------------------------------------------------------------

message DeleteAlarmPolicyRulesInput {
	repeated string alarm_policy_rules = 1;
}
message DeleteAlarmPolicyRulesOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated string alarm_policy_rules = 4;
}

// ----------------------------------------------------------------------------

message DescribeAlarmPolicyActionsInput {
	optional string alarm_policy = 1;
	repeated string alarm_policy_actions = 2;
	optional int32 offset = 3;
	optional int32 limit = 4;
}
message DescribeAlarmPolicyActionsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated ResponseItem alarm_policy_action_set = 4;
	optional int32 total_count = 5;

	message ResponseItem {
		optional string alarm_policy_id = 1;
		optional string alarm_policy_action_id = 2;
		optional string trigger_action = 3;
		optional string trigger_status = 4;
	}
}

// ----------------------------------------------------------------------------

message AddAlarmPolicyActionsInput {
	optional string alarm_policy = 1;
	repeated ActionItem actions = 2;

	message ActionItem {
		optional string trigger_action = 1;
		optional string trigger_status = 2;
	}
}
message AddAlarmPolicyActionsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated string alarm_policy_actions = 4;
}

// ----------------------------------------------------------------------------

message ModifyAlarmPolicyActionAttributesInput {
	optional string alarm_policy_action = 1;
	optional string trigger_action = 2;
	optional string trigger_status = 3;
}
message ModifyAlarmPolicyActionAttributesOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string alarm_policy_action_id = 4;
}

// ----------------------------------------------------------------------------

message DeleteAlarmPolicyActionsInput {
	repeated string alarm_policy_actions = 1;
}
message DeleteAlarmPolicyActionsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated string alarm_policy_actions = 4;
}

// ----------------------------------------------------------------------------

message AssociateAlarmPolicyInput {
	optional string alarm_policy = 1;
	repeated string resources = 2;
	optional string related_resource = 3;
}
message AssociateAlarmPolicyOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string job_id = 4;
}

// ----------------------------------------------------------------------------

message DissociateAlarmPolicyInput {
	optional string alarm_policy = 1;
	repeated string resources = 2;
	optional string related_resource = 3;
}
message DissociateAlarmPolicyOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string job_id = 4;
}

// ----------------------------------------------------------------------------

message ApplyAlarmPolicyInput {
	optional string alarm_policy = 1;
}
message ApplyAlarmPolicyOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string job_id = 4;
}

// ----------------------------------------------------------------------------

message DescribeAlarmsInput {
	repeated string alarms = 1;
	optional string policy = 2;
	optional string status = 3;
	optional string resource = 4;
	optional int32 offset = 5;
	optional int32 limit = 6;
}
message DescribeAlarmsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated ResponseItem alarm_set = 4;
	optional int32 total_count = 5;

	message ResponseItem {
		optional string alarm_id = 1;
		optional string status = 2;
		optional string alarm_policy_id = 3;
		optional string resource_id = 4;
		optional string related_resource = 5;
		optional google.protobuf.Timestamp create_time = 6;
	}
}

// ----------------------------------------------------------------------------

message DescribeAlarmHistoryInput {
	optional string alarm = 1;
	optional string history_type = 2;
	optional int32 offset = 3;
	optional int32 limit = 4;
}
message DescribeAlarmHistoryOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated ResponseItem alarm_history_set = 4;
	optional int32 total_count = 5;

	message ResponseItem {
		optional string alarm_id = 1;
		optional string alarm_history_id = 2;
		optional string history_type = 3;
		optional google.protobuf.Timestamp create_time = 4;
		optional string description = 5;
	}
}

// ----------------------------------------------------------------------------
// END
// ----------------------------------------------------------------------------
