// Copyright 2017 <chaishushan{AT}gmail.com>. All rights reserved.
// Use of this source code is governed by a Apache
// license that can be found in the LICENSE file.

syntax = "proto2";

package qingcloud.api.spec_metadata;

option go_package = "github.com/chai2010/qingcloud-go/pkg/api/spec_metadata;spec_metadata";

import "google/protobuf/descriptor.proto";

// ----------------------------------------------------------------------------
// annotation
// ----------------------------------------------------------------------------

extend google.protobuf.FileOptions {
	optional FileOption file_option = 20171111;
}

extend google.protobuf.ServiceOptions {
	optional ServiceOption service_option = 20171111;
}

extend google.protobuf.MethodOptions {
	optional MethodOption method_option = 20171111;
}

extend google.protobuf.MessageOptions {
	optional MessageOption message_option = 20171111;
}

extend google.protobuf.FieldOptions {
	optional FieldOption field_option = 20171111;
}

// ----------------------------------------------------------------------------
// Only for QingCloud service api
// ----------------------------------------------------------------------------

message FileSpec {
	required string file_name = 1;
	required string package_name = 2;
	optional ExternalDocumentation external_docs = 3;
}

message ServiceSpec {
	required string service_name = 1;
	repeated ServiceMethodSpec method_list = 2;
	optional ExternalDocumentation external_docs = 3;
}

message ServiceMethodSpec {
	required string method_name = 1;
	required string input_type_name = 2;
	required string output_type_name = 3;
	optional string http_method = 4 [default = "GET"];
	optional ExternalDocumentation external_docs = 5;
}

// ----------------------------------------------------------------------------
// options
// ----------------------------------------------------------------------------

message FileOption {
	optional ExternalDocumentation external_docs = 1;
}

message ServiceOption {
	optional ExternalDocumentation external_docs = 1;
	optional CommandInfo cmd_info = 2;
}

message MethodOption {
	optional string http_method = 1;
	optional ExternalDocumentation external_docs = 2;
	optional CommandInfo cmd_info = 3;
}

message MessageOption {
	optional ExternalDocumentation external_docs = 1;
}

message FieldOption {
	optional double min_value = 1;
	optional double max_value = 2;
	optional double multiple_of_value = 3;
	optional double exclusive_min_value = 4;
	optional double exclusive_max_value = 5;
	optional int32 min_length = 6;
	optional int32 max_length = 7;
	optional string regexp_value = 8;
	repeated string enum_value = 9;
	optional ExternalDocumentation external_docs = 10;
	optional string struct_tag = 11;
}

message ExternalDocumentation {
	optional string title = 1;
	optional string description = 2;
	optional string url = 3;
}

message CommandInfo {
	optional string name = 1;
	repeated string aliases = 2;
	optional string usage = 3;
}

// ----------------------------------------------------------------------------
// END
// ----------------------------------------------------------------------------
